--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,10 @@ redis = { version = "0.30", optional = true, default-features = false, features 
 
 [dev-dependencies]
 url = "2"
+trybuild = "1.0"
+hyper = { version = "1", features = ["server", "http1"] }
+hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
+http-body-util = "0.1"
+bytes = "1"
+serde_json = "1"
+reqwest = { version = "0.12", default-features = false }
